# numcodecs-pw-ratio

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/js/: katex.js
src/numcodecs_pw_ratio/: __init__.py
tests/: test_eb_pw.py
