[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numcodecs-pw-ratio"
version = "0.2.1"
description = "Meta codec for bounding the pointwise ratio error for the `numcodecs` buffer compression API"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.10"
dependencies = [
    "leb128~=1.0.8",
    "numcodecs>=0.13.0,<0.17",
    "numcodecs-combinators~=0.2.13",
    "numpy~=2.0",
    "typing-extensions~=4.6",
]

[dependency-groups]
dev = ["mypy~=1.14", "pytest~=8.3", "numcodecs-wasm-sz3~=0.8.4"]

[project.entry-points."numcodecs.codecs"]
"pw_ratio" = "numcodecs_pw_ratio:PointwiseRatioErrorBoundedCodec"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"numcodecs_pw_ratio" = ["py.typed"]

[[tool.mypy.overrides]]
module = ["numcodecs.*"]
follow_untyped_imports = true
